Added abstraction layer for drawables with database